--- a/MyTrade/Views/Wallet/AddWallet.cshtml
+++ b/MyTrade/Views/Wallet/AddWallet.cshtml
@@ -214,6 +214,7 @@
             $("#divQr").show();
             $("#chequdate").show();
             $("#paymentmode").show();
+            $("#divPaymentMode").show();
         }
         else if ($('#PaymentType').val() == 'Online') {
             $("#paymentmode").hide();
