--- a/MyTrade/Views/Home/emailtemplate.cshtml
+++ b/MyTrade/Views/Home/emailtemplate.cshtml
@@ -1,8 +1,10 @@
 ﻿
 @{
     ViewBag.Title = "emailtemplate";
-    Layout = "~/Views/Shared/_UserLayout.cshtml";
+    Layout = null;
 }
+<link href="~/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha256-eZrrJcwDc/3uDhsdt61sL2oOBY362qM3lon1gyExkL0=" crossorigin="anonymous" />
 <style>
     .email-template{
