--- a/MyTrade/Views/Shared/_UserLayout.cshtml
+++ b/MyTrade/Views/Shared/_UserLayout.cshtml
@@ -52,16 +52,19 @@
                 border-right: 45px solid;
             }
         }
+
         a.sidebarCollapse {
             color: #204f87;
             padding-left: 100px;
         }
+
         @@media (max-width: 991px) {
             a.sidebarCollapse {
                 color: black;
                 padding-left: 33px;
             }
         }
+
         @@media(max-width: 991px) {
             .sidebar-wrapper .sidebar-theme {
                 background-image: linear-gradient(60deg,#ffa726,#fb8c00);
@@ -69,28 +72,29 @@
         }
 
 
-    #preloader {
-    position: fixed;
-    top:0;
-    left:0;
-    right:0;
-    bottom:0;
-    background-color:#FFF; /* change if the mask should have another color then white */
-    z-index:99999; /* makes sure it stays on top */
-}
-#status {
-    width:100px;
-    height:100px;
-    position:absolute;
-    left:50%; /* centers the loading animation horizontally one the screen */
-    top:50%; /* centers the loading animation vertically one the screen */
-    background-image:url("../imgs/loader.gif");
-    z-index:9999; /* path to your loading animation */
-    background-repeat:no-repeat;
-    background-position:center;
-    background-size: cover;
-    margin:-50px 0 0 -50px; /* is width and height divided by two */
-}
+        #preloader {
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background-color: #FFF; /* change if the mask should have another color then white */
+            z-index: 99999; /* makes sure it stays on top */
+        }
+
+        #status {
+            width: 100px;
+            height: 100px;
+            position: absolute;
+            left: 50%; /* centers the loading animation horizontally one the screen */
+            top: 50%; /* centers the loading animation vertically one the screen */
+            background-image: url("../imgs/loader.gif");
+            z-index: 9999; /* path to your loading animation */
+            background-repeat: no-repeat;
+            background-position: center;
+            background-size: cover;
+            margin: -50px 0 0 -50px; /* is width and height divided by two */
+        }
     </style>
     <!-- END PAGE LEVEL PLUGINS/CUSTOM STYLES -->
 </head>
@@ -218,6 +222,7 @@
                             </div>
                         </a>
                     </li>
+
                     <li class="menu">
                         <a href="#Wallet" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
                             <div class="">
@@ -229,15 +234,26 @@
                             </div>
                         </a>
                         <ul class="collapse submenu list-unstyled" id="Wallet" data-parent="#accordionExample">
-                            <li>
-                                <a href="/Wallet/AddWallet">Wallet Request</a>
-                            </li>
-                            <li>
-                                <a href="/Wallet/WalletList">Wallet Request List</a>
-                            </li>
-                            <li>
-                                <a href="/Wallet/WalletLedgerList">Wallet Ledger</a>
-                            </li>
+                            @if (Session["IdActivated"] != null)
+                            {
+                                if (Convert.ToBoolean(Session["IdActivated"]) == true)
+                                {
+                                    <li>
+                                        <a href="/Wallet/AddWallet">Wallet Request</a>
+                                    </li>
+                                    <li>
+                                        <a href="/Wallet/WalletList">Wallet Request List</a>
+                                    </li>
+                                    <li>
+                                        <a href="/Wallet/WalletLedgerList">Wallet Ledger</a>
+                                    </li>
+
+                                }
+                                else
+                                {
+                                }
+                            }
+
                         </ul>
                     </li>
                     <li class="menu">
@@ -251,12 +267,22 @@
                             </div>
                         </a>
                         <ul class="collapse submenu list-unstyled" id="Account" data-parent="#accordionExample">
-                            <li>
-                                <a href="/user/Topup">Topup</a>
-                            </li>
-                            <li>
-                                <a href="/user/TopUpList">Topup List</a>
-                            </li>
+                            @if (Session["IdActivated"] != null)
+                            {
+                                if (Convert.ToBoolean(Session["IdActivated"]) == true)
+                                {
+                                    <li>
+                                        <a href="/user/Topup">Topup</a>
+                                    </li>
+                                    <li>
+                                        <a href="/user/TopUpList">Topup List</a>
+                                    </li>
+                                }
+                                else
+                                {
+
+                                }
+                            }
                         </ul>
                     </li>
                     <li class="menu">
@@ -285,7 +311,7 @@
                             <li>
                                 <a href="/user/Tree">Level Tree TPS</a>
                             </li>
-                           
+
                             <li>
                                 <a href="/Downline/AssociateTree">Downteam Tree</a>
                             </li>
@@ -303,9 +329,15 @@
                             </div>
                         </a>
                         <ul class="collapse submenu list-unstyled" id="Pin" data-parent="#accordionExample">
-                            <li>
-                                <a href="/User/EPinRequest">Request For Pin</a>
-                            </li>
+                            @if (Session["IdActivated"] != null)
+                            {
+                                if (Convert.ToBoolean(Session["IdActivated"]) == true)
+                                {
+                                    <li>
+                                        <a href="/User/EPinRequest">Request For Pin</a>
+                                    </li>
+                                }
+                            }
                             <li>
                                 <a href="/User/PinList">Pin List</a>
                             </li>
@@ -556,11 +588,11 @@
     </div>
     <script src="https://code.jquery.com/jquery-1.12.4.min.js" type="text/javascript"></script>
     <script type="text/javascript">
-$(window).load(function() { // makes sure the whole site is loaded
-$('#status').fadeOut(); // will first fade out the loading animation
-$('#preloader').delay(200).fadeOut(400); // will fade out the white DIV that covers the website.
-$('body').delay(200).css({'overflow':'visible'});
-})
+        $(window).load(function () { // makes sure the whole site is loaded
+            $('#status').fadeOut(); // will first fade out the loading animation
+            $('#preloader').delay(200).fadeOut(400); // will fade out the white DIV that covers the website.
+            $('body').delay(200).css({ 'overflow': 'visible' });
+        })
     </script>
 
 
