--- a/MyTrade/Views/User/UserDashBoard.cshtml
+++ b/MyTrade/Views/User/UserDashBoard.cshtml
@@ -190,10 +190,10 @@
                             <p>In-Active </p>
                             <h5 class=""><span class="w-currency"></span> @ViewBag.TotalInActive</h5>
                         </div>
-                        <div class="seconddiv">
+                        @*<div class="seconddiv">
                             <p>TPS Id </p>
                             <h5 class=""><span class="w-currency"></span> @ViewBag.TPSId</h5>
-                        </div>
+                        </div>*@
                     </div>
                 </div>
             </div>
@@ -214,10 +214,10 @@
                             <p>In-Active </p>
                             <h5 class=""><span class="w-currency"></span> @ViewBag.TotalTeamInActive</h5>
                         </div>
-                        <div class="seconddiv">
+                        @*<div class="seconddiv">
                             <p>TPS Id </p>
                             <h5 class=""><span class="w-currency"></span> @ViewBag.TotalTeamTPSId</h5>
-                        </div>
+                        </div>*@
                     </div>
                 </div>
             </div>
@@ -246,14 +246,10 @@
             <div class="widget widget-account-invoice-three third">
                 <div class="widget-heading">
                     <div class="wallet-balance">
-                        <p>Wallet Amount</p>
-                        <h5 class=""><span class="w-currency"></span>Rs. @ViewBag.TotalWalletAmount</h5>
+                        <p>TPS Wallet</p>
+                        <h5 class=""><span class="w-currency"></span>Rs. @ViewBag.TotalROI</h5>
                     </div>
                     <div class="particular-balance d-flex mt-5">
-                        <div class="fisrtdiv">
-                            <p>TTP</p>
-                            <h5 class=""><span class="w-currency"></span>Rs. @ViewBag.LevelIncomeTr1</</h5>
-                        </div>
                         <div class="seconddiv">
                             <p>TPS</p>
                             <h5 class=""><span class="w-currency"></span> Rs. @ViewBag.TotalROI</h5>
@@ -370,6 +366,14 @@
                 </div>
             </div>
         }
+        <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12 col-12 mt-3">
+            <div class="widget widget-chart-two ">
+                <div class="widget-heading">
+                    <h5 class="">No Business</h5>
+                </div>
+              
+            </div>
+        </div>
         <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12 col-12 mt-3">
             <div class="widget widget-chart-two ">
                 <div class="widget-heading">
