--- a/MyTrade/Views/Shared/_UserLayout.cshtml
+++ b/MyTrade/Views/Shared/_UserLayout.cshtml
@@ -304,7 +304,7 @@
                         </a>
                         <ul class="collapse submenu list-unstyled" id="Pin" data-parent="#accordionExample">
                             <li>
-                                <a href="/User/EPinRequest">Request For Pin</a>
+                                <a href="/User/EPinRequest">Generate EPin</a>
                             </li>
                             <li>
                                 <a href="/User/PinList">Pin List</a>
