--- a/MyTrade/Views/User/PinList.cshtml
+++ b/MyTrade/Views/User/PinList.cshtml
@@ -47,7 +47,9 @@
                                         <th><input type="checkbox" id="ckbCheckAll" /></th>
                                         <th>Sr No.</th>
                                         <th>E-Pin No</th>
+                                        <th>Package Name</th>
                                         <th>Pin Amount</th>
+                                        <th>GST</th>
                                         <th>Pin Status</th>
                                         @*<th>Is Registered</th>*@
                                         <th>Registered To</th>
@@ -82,7 +84,9 @@
                                                     }
                                                     <td>@i</td>
                                                     <td>@Item.ePinNo</td>
+                                                    <td>@Item.ProductName</td>
                                                     <td>@Item.PinAmount</td>
+                                                    <td>@Item.GST</td>
                                                     <td>@Item.PinStatus</td>
                                                     <td>@Item.RegisteredTo</td>
                                                     @*<td>@Item.RegisteredTo </td>*@
