--- a/MyTrade/Views/Shared/_Layout.cshtml
+++ b/MyTrade/Views/Shared/_Layout.cshtml
@@ -85,7 +85,7 @@
                     @*<a href="/User/UserDashboard" class="nav-link">MY TRADE</a>*@
                 </li>
             </ul>
-            <ul class="navbar-item flex-row ml-md-0 ml-auto">
+            @*<ul class="navbar-item flex-row ml-md-0 ml-auto">
                 <li class="nav-item align-self-center search-animated">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-search toggle-search"><circle cx="11" cy="11" r="8"></circle><line x1="21" y1="21" x2="16.65" y2="16.65"></line></svg>
                     <form class="form-inline search-full form-inline search" role="search">
@@ -94,13 +94,8 @@
                         </div>
                     </form>
                 </li>
-            </ul>
+            </ul>*@
             <ul class="navbar-item flex-row ml-md-auto">
-                <li>
-                    <p style="margin-top:14px;margin-right:50px;">
-                        <a href="/Admin/ChangePassword"style="color:#ebecf7;">Change Password </a>
-                    </p>
-                </li>
                 <li class="nav-item dropdown user-profile-dropdown">
                     <a href="javascript:void(0);" class="nav-link dropdown-toggle user" id="userProfileDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
                         <img src="~/assets/img/tradelogo.png" alt="@Session["FullName"]">
