--- a/MyTrade/Views/User/PinTransferReport.cshtml
+++ b/MyTrade/Views/User/PinTransferReport.cshtml
@@ -68,6 +68,8 @@
                                                     <th>To Id</th>
                                                     <th>To Name</th>
                                                     <th>Transfer Date</th>
+                                                    <th>BV</th>
+                                                    
                                                 </tr>
 
                                             </thead>
@@ -92,6 +94,7 @@
                                                                 <td>@Item.ToId</td>
                                                                 <td>@Item.ToName</td>
                                                                 <td>@Item.TransferDate</td>
+                                                                <td>@Item.BV</td>
                                                             </tr>
                                                             i++;
                                                         }
