--- a/MyTrade/Views/User/Tree.cshtml
+++ b/MyTrade/Views/User/Tree.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Tree";
     Layout = "~/Views/Shared/_UserLayout.cshtml";
 }
-<link href="~/MyTradeWebsite/assets/css/fontawesome.min.css" rel="stylesheet" />
+
 <style>
     .level-img {
         width: 100px;
@@ -94,10 +94,10 @@
                                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-user"><path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path><circle cx="12" cy="7" r="4"></circle></svg>Sponsor: @Model.SponsorName
                                         </li>
                                         <li class="contacts-block__item">
-                                            <i class="fa fa-rupee-sign" style="margin-right:20px"></i> Self BV : 0
+                                            <i class="fa fa-inr" style="margin-right:16px; margin-left: 4px; font-size: 18px;"></i> Self BV : 0
                                         </li>
                                         <li class="contacts-block__item">
-                                            <i class="fa fa-rupee-sign" style="margin-right:20px"></i> Team BV : 0
+                                            <i class="fa fa-inr" style="margin-right:16px; margin-left: 4px; font-size: 18px;"></i> Team BV : 0
                                         </li>
                                         <li class="contacts-block__item">
                                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-dollar-sign"><line x1="12" y1="1" x2="12" y2="23"></line><path d="M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"></path></svg>Self BV: 0
