--- a/MyTrade/Views/User/PinList.cshtml
+++ b/MyTrade/Views/User/PinList.cshtml
@@ -29,7 +29,7 @@
                                         @*<option value="">-Select-</option>*@
                                         <option value="T">Available</option>
                                         <option value="P">Used</option>
-                                      
+
                                     </select>
                                 </div>
                             </div>
@@ -53,7 +53,11 @@
                                         <th>Total amount</th>
                                         <th>Pin Status</th>
                                         @*<th>Is Registered</th>*@
-                                        <th>Registered To</th>
+                                        @if (Model.PinStatus == "P")
+                                        {
+                                            <th>Registered To</th>
+                                        }
+                                        
                                         <th>Pin Generation Date</th>
                                         <th>Action</th>
                                     </tr>
@@ -90,7 +94,14 @@
                                                     <td>@Item.GST</td>
                                                     <td>@Item.Amount</td>
                                                     <td>@Item.PinStatus</td>
-                                                    <td>@Item.RegisteredTo</td>
+                                                    @if (Item.PinStatus == "Used")
+                                                    {
+                                                        <td>@Item.RegisteredTo</td>
+                                                    }
+                                                    else
+                                                    {
+
+                                                    }
                                                     @*<td>@Item.RegisteredTo </td>*@
                                                     <td>@Item.PinGenerationDate</td>
                                                     @if (Item.PinStatus == "Available")
@@ -334,7 +345,7 @@
 </script>
 @if (TempData["msg"] != null)
 {
-<script>
+    <script>
         $(document).ready(function () {
             Snackbar.show({
                 text: '@TempData["msg"]',
@@ -343,7 +354,7 @@
                 pos: 'top-right'
             });
         });
-</script>
+    </script>
 }
 @if (TempData["error"] != null)
 {
