--- a/MyTrade/Views/User/PinTransferReport.cshtml
+++ b/MyTrade/Views/User/PinTransferReport.cshtml
@@ -63,8 +63,8 @@
                                                     <th>EPin No</th>
                                                     <th>Pin Amount</th>
                                                     <th>Package Name</th>
-                                                    <th>From Id</th>
-                                                    <th>From Name</th>
+                                                    @*<th>From Id</th>
+                                                    <th>From Name</th>*@
                                                     <th>To Id</th>
                                                     <th>To Name</th>
                                                     <th>Transfer Date</th>
@@ -89,8 +89,8 @@
                                                                 <td>@Item.ePinNo</td>
                                                                 <td>@Item.PinAmount</td>
                                                                 <td>@Item.ProductName</td>
-                                                                <td>@Item.FromId</td>
-                                                                <td>@Item.FromName</td>
+                                                                @*<td>@Item.FromId</td>
+                                                                <td>@Item.FromName</td>*@
                                                                 <td>@Item.ToId</td>
                                                                 <td>@Item.ToName</td>
                                                                 <td>@Item.TransferDate</td>
