--- a/MyTrade/Views/User/TopUpList.cshtml
+++ b/MyTrade/Views/User/TopUpList.cshtml
@@ -57,6 +57,7 @@
                                         <th>Transaction By</th>
                                         <th>Status</th>
                                         <th>TPS Percentage</th>
+                                        <th>Days</th>
                                         <th>Date</th>
                                     </tr>
                                 </thead>
@@ -79,6 +80,7 @@
                                                     <td>@Item.TransactionBy</td>
                                                     <td>@Item.Status</td>
                                                     <td>@Item.ROIPercentage %</td>
+                                                    <td class="btn btn-dark btn-sm">@Item.PackageDays</td>
                                                     <td>@Item.TopUpDate</td>
                                                 </tr>
                                                 i++;
