--- a/MyTrade/Views/Master/PackageList.cshtml
+++ b/MyTrade/Views/Master/PackageList.cshtml
@@ -61,7 +61,7 @@
                                                     <td>@Item.ToAmount</td>
                                                     <td>
                                                         <a href="/Master/PackageMaster?PackageID=@Item.Packageid" class="btn btn-info btn-sm">Edit</a>
-                                                        <a href="/Master/DeleteProduct/@Item.Packageid" class="btn btn-danger btn-sm" onclick="return confirm('Are you sure you want to delete this Package?');" name="btnDelete">Delete</a>
+                                                        <a href="/Master/DeletePackage?id=@Item.Packageid" class="btn btn-danger btn-sm" onclick="return confirm('Are you sure you want to delete this Package?');" name="btnDelete">Delete</a>
                                                     </td>
 
                                                 </tr>
