--- a/MyTrade/Views/User/PinList.cshtml
+++ b/MyTrade/Views/User/PinList.cshtml
@@ -49,7 +49,7 @@
                                         <th>E-Pin No</th>
                                         <th>Package Name</th>
                                         <th>Pin Amount</th>
-                                        <th>GST</th>
+                                        <th>GST (18 %)</th>
                                         <th>Total amount</th>
                                         <th>Pin Status</th>
                                         @*<th>Is Registered</th>*@
@@ -106,7 +106,7 @@
                                                     <td>@Item.PinGenerationDate</td>
                                                     @if (Item.PinStatus == "Available")
                                                     {
-                                                        <td><a href="javascript:void(0)" class="btn btn-success btn-sm" onclick="openPopup('@Item.ePinNo');">Activate User</a></td>
+                                                        <td style="width:200px;"><a    style="width:120px;" href="javascript:void(0)" class="btn btn-success btn-sm" onclick="openPopup('@Item.ePinNo');">Activate User</a></td>
                                                     }
                                                     else
                                                     {
