--- a/MyTrade/Views/User/BankDetailsUpdate.cshtml
+++ b/MyTrade/Views/User/BankDetailsUpdate.cshtml
@@ -36,6 +36,12 @@
                                 </div>
                             </div>
                             <div class="col-md-4">
+                                <div class="form-group">
+                                    <label>Pan Image</label><span style="color: red">*</span><br />
+                                    <input type="file" name="Image" id="Image" />
+                                </div>
+                            </div>
+                            <div class="col-md-4">
                                 <div class="form-group ">
                                     <label>
                                         Bank Name
