--- a/MyTrade/Views/User/ChangePasswordForUser.cshtml
+++ b/MyTrade/Views/User/ChangePasswordForUser.cshtml
@@ -130,23 +130,23 @@
             $("#ConfirmNewPassword").focus();
         }
     }
-    function checkPasswordComplexity(pwd) {
-        debugger;
-        var pwd = $("#NewPassword").val();
-        var letter = /[a-zA-Z]/;
-        var number = /[0-9]/;
-        var valid = number.test(pwd) && letter.test(pwd); //match a letter _and_ a number
-        if (valid == false) {
-            Snackbar.show({
-                text: "New Password should be alpha numeric",
-                actionTextColor: '#fff',
-                backgroundColor: '#e7515a',
-                pos: 'top-right'
-            });
-            $("#NewPassword").val('');
-            $("#NewPassword").focus();
-        }
-    }
+    //function checkPasswordComplexity(pwd) {
+    //    debugger;
+    //    var pwd = $("#NewPassword").val();
+    //    var letter = /[a-zA-Z]/;
+    //    var number = /[0-9]/;
+    //    var valid = number.test(pwd) && letter.test(pwd); //match a letter _and_ a number
+    //    if (valid == false) {
+    //        Snackbar.show({
+    //            text: "New Password should be alpha numeric",
+    //            actionTextColor: '#fff',
+    //            backgroundColor: '#e7515a',
+    //            pos: 'top-right'
+    //        });
+    //        $("#NewPassword").val('');
+    //        $("#NewPassword").focus();
+    //    }
+    //}
 
 </script>
 
