--- a/MyTrade/Views/User/BankDetailsUpdate.cshtml
+++ b/MyTrade/Views/User/BankDetailsUpdate.cshtml
@@ -39,6 +39,7 @@
                                 <div class="form-group">
                                     <label>Pan Image</label><span style="color: red">*</span><br />
                                     <input type="file" name="Image" id="Image" />
+                                    <p @Model.Image></p>
                                 </div>
                             </div>
                             <div class="col-md-4">
